# mod_dict

./: .gitignore  BENCHMARK.md  BENCHMARK_RU.md  CMakeLists.txt  LICENSE  README.md  README_RU.md  install_dev.py  pyproject.toml
.github/workflows/: build.yml
src/: mod_dict.pyi
src/core/: elastic_pool.cpp  elastic_pool.h  field_index.cpp  field_index.h  flat_hash_map.h  mod_dict.cpp  mod_dict.h  mod_value.cpp  mod_value.h
src/core/codecs/: codec_base.h  datetime_codec.h  native_codecs.h  serializer.cpp  serializer.h  xxhash64.h
src/python_bindings/: converter_registry.cpp  converter_registry.h  error_handling.h  mod_dict_binding.h  mod_dict_type.cpp  module.cpp
tests/: _env.py  bench_report.py  test_field_index_sync.py  test_quick.py  test_v2_basic.py
