[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "mod_dict"
version = "0.2.0"
description = "Nested dictionary with indexed field queries, merge and serialization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["dictionary", "nested", "index", "merge", "serialization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = []
